; ModuleID = '/home/carl/AnghaBench/Cinder/src/freetype/gxvalid/extr_gxvmort2.c_gxv_mort_subtable_type2_entry_validate.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/freetype/gxvalid/extr_gxvmort2.c_gxv_mort_subtable_type2_entry_validate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32, i32, i32)* @gxv_mort_subtable_type2_entry_validate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gxv_mort_subtable_type2_entry_validate(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @FT_UNUSED(i32 %14)
  %16 = load i32, i32* %9, align 4
  %17 = call i32 @FT_UNUSED(i32 %16)
  %18 = load i32, i32* %11, align 4
  %19 = call i32 @FT_UNUSED(i32 %18)
  %20 = load i32, i32* %8, align 4
  %21 = and i32 %20, 16383
  store i32 %21, i32* %13, align 4
  %22 = load i32, i32* %13, align 4
  %23 = icmp slt i32 0, %22
  br i1 %23, label %24, label %29

24:                                               ; preds = %6
  %25 = load i32, i32* %10, align 4
  %26 = load i32, i32* %13, align 4
  %27 = load i32, i32* %12, align 4
  %28 = call i32 @gxv_mort_subtable_type2_ligActionOffset_validate(i32 %25, i32 %26, i32 %27)
  br label %29

29:                                               ; preds = %24, %6
  ret void
}

declare dso_local i32 @FT_UNUSED(i32) #1

declare dso_local i32 @gxv_mort_subtable_type2_ligActionOffset_validate(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
